# home-automation-panel

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: main.rs  tasks.rs
src/tasks/: network.rs
